syntax = "proto3";

package api.helloworld.v1;

import "google/api/annotations.proto";

option go_package = "helloworld/api/helloworld/v1;v1";
option java_multiple_files = true;
option java_package = "api.helloworld.v1";

service Demo {
	rpc CreateDemo (CreateDemoRequest) returns (CreateDemoReply);
	rpc UpdateDemo (UpdateDemoRequest) returns (UpdateDemoReply);
	rpc DeleteDemo (DeleteDemoRequest) returns (DeleteDemoReply);
	rpc GetDemo (GetDemoRequest) returns (GetDemoReply) {
	    option (google.api.http) = {
             get: "/getDemo"
        };
	};
	rpc ListDemo (ListDemoRequest) returns (ListDemoReply);
}

message CreateDemoRequest {}
message CreateDemoReply {}

message UpdateDemoRequest {}
message UpdateDemoReply {}

message DeleteDemoRequest {}
message DeleteDemoReply {}

message GetDemoRequest {
    // ID
    int64 user_id = 1;
}
message GetDemoReply {
    string result = 1;
}

message ListDemoRequest {}
message ListDemoReply {}